# dotfiles

./: .Xresources  .bashrc  .gitconfig  .gitignore  .gitinclude  .profile  .xbindkeysrc  .xinitrc  dwm.desktop  get.sh  librewolf.sh  remmina.sh  requirements.archlinux  setup.sh  spotify.sh  x.sh
.agents/: .skill-lock.json
.assets/: archlinux_ascii.txt  neofetch.conf
.config/wmenu/: LICENSE  README.md  menu.c  menu.h  meson.build  pango.c  pango.h  pool-buffer.c  pool-buffer.h  render.c  render.h  wayland.c  wayland.h  wmenu-run.c  wmenu.c
.config/wmenu/docs/: meson.build  wmenu.1.scd
.config/wmenu/protocols/: meson.build
.requirements/: pacman
.tmp/: 0016d453-cec7-4473-80b0-8031712f082a.txt  0021326e-0bb3-47d5-8391-56e88975b19f.txt  00827585-8205-459e-b1f2-ca9a4f4e20f0.txt  008588ac-cb99-4192-9927-351ab4610c14.txt  009082ab-9ad4-4436-9d84-96ea4377bff3.txt  00d91af6-9de1-441e-95cb-0143f9067508.txt  0184c66e-1123-42e3-9bed-a50b1452a5db.txt  020693fc-c214-456b-84f5-78ece386d20b.txt  0368422d-5961-4640-9ef6-9aca88a9f33b.txt  03f4a145-3bd1-4b22-86a1-29c8921c4bcd.txt  040a8cb7-0bd7-4aa0-a899-5023d206a392.txt  04351c65-31f0-43fa-b791-757b56eada18.txt  04c295c0-8e8f-4152-95f5-c9961e1683f5.txt  053f49a3-2986-46fc-bf66-bdfab20b7514.txt  054123ee-9239-42fb-9ced-770597c69706.txt  05637978-5ea6-4ecb-9900-25cbae3bc60f.txt  0599c5c7-d073-4dc8-a2ee-eaf440404a77.txt  05a5c528-606d-4081-aa3a-c926c9213f0d.txt  05e380dd-eb88-4569-adae-7410b38e1c4e.txt  067c073f-d47c-4fc9-8ab6-9bf6fb142cda.txt  07062fa7-171e-4a21-897b-6cbfe233ece3.txt  089937d9-af65-41ed-b15e-dc09d3fd1ef3.txt  08b1a274-c146-4b49-8745-c9834fad3855.txt  094824c3-1007-43c9-87a6-f6a37ee59e34.txt  095a3500-64e1-4cd0-a97b-9ad188a7237c.txt  0a87aa22-6321-44ce-a0a9-8f69010614fc.txt  0acc1aa6-8263-4577-a1aa-f2811a0ad392.txt  0b4559f2-ba70-4071-b7fb-6e1eef5eae9a.txt  0b8c2a7e-34bf-4774-a64f-a07eb58cd26a.txt  (+579 more)
(+165 files in other folders)
